<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moranlee.justgo.activity.activity.food_usage.SelectFoodOption">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/splash_screen2"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">



        <!--allow user to input amount and select unit-->

        <Button
            android:id="@+id/select_from_old_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/select_search_food_by_name"
            android:layout_alignStart="@+id/select_search_food_by_name"
            android:layout_marginBottom="65dp"
            android:background="@drawable/select_diet" />

        <Button
            android:id="@+id/select_search_food_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/search_diet" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
