...
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/go_add_diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/food_icon_main"
                android:layout_marginStart="16dp"
                android:layout_alignTop="@+id/diet_management"
                android:layout_alignStart="@+id/main_weight" />
...
